<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/my_nav_host_fragment"
    tools:context=".main"
    tools:ignore="InvalidId">

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MoneyFragment"
        android:layout_margin="20dp"
        android:columnCount="2"
        android:rowCount="3">


        <ImageView
            android:id="@+id/imageView"
            android:layout_width="182dp"
            android:layout_height="172dp"
            android:layout_row="0"
            android:layout_column="0"
            android:contentDescription="@string/money"
            android:padding="10dp"
            android:src="@drawable/money"
            tools:ignore="OnClick" />

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="152dp"
            android:layout_height="173dp"
            android:layout_row="0"
            android:layout_column="1"
            android:padding="10dp"
            android:src="@drawable/temperature"
            android:contentDescription="@string/temperature" />

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="181dp"
            android:layout_height="162dp"
            android:layout_row="2"
            android:layout_column="0"
            android:padding="10dp"
            android:src="@drawable/weight"
            android:contentDescription="@string/weight"/>

        <ImageView
            android:id="@+id/imageView4"
            android:layout_width="182dp"
            android:layout_height="187dp"
            android:layout_row="1"
            android:layout_column="0"
            android:padding="10dp"
            android:src="@drawable/distance"
            android:contentDescription="@string/distance"/>

        <ImageView
            android:id="@+id/imageView6"
            android:layout_width="164dp"
            android:layout_height="188dp"
            android:layout_row="1"
            android:layout_column="1"
            android:src="@drawable/law"
            android:padding="10dp"
            android:contentDescription="@string/scale"/>

        <ImageView
            android:id="@+id/imageView11"
            android:layout_width="164dp"
            android:layout_height="160dp"
            android:layout_row="2"
            android:layout_column="1"
            android:contentDescription="@string/pressure"
            android:padding="10dp"
            android:src="@drawable/pressure" />

    </GridLayout>




</FrameLayout>